add protected categories

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="TrustedUserIdSet" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ProtectedCategoryIdSet" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
