--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="ProtectedCategoryIdSet" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="UntrustedUserIdSet" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
